--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
   "dependencies": {
     "@actions/core": "^1.2.2",
     "@azure/arm-appcontainers": "^1.1.0",
+    "@azure/identity": "^2.1.0",
+    "@azure/ms-rest-js": "^2.6.2",
     "@types/q": "^1.5.2",
-    "azure-actions-webclient": "^1.0.10"
+    "azure-actions-webclient": "^1.0.10",
+    "ms-rest-js": "^1.0.1"
   },
   "devDependencies": {
     "@types/node": "^13.5.2",
