--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -12,10 +12,10 @@ jobs:
     - name: 'Login via Azure CLI'
       uses: azure/login@v1
       with:
-        creds: ${ secrets.AZURE_CREDENTIALS }
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
 
     - name: 'Deploy to Azure Container Apps'
-      uses: "yuhattor/aca-deploy@"
+      uses: "yuhattor/aca-deploy@${github.sha}"
       with:
         resource-group: sample-rg
         name: yuhattor-container
