--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -9,6 +9,9 @@ jobs:
     - name: 'Checkout GitHub Action'
       uses: actions/checkout@master
       
+    - name: 'Install npm packages'
+      run: npm install
+
     - name: 'Login via Azure CLI'
       uses: azure/login@v1
       with:
