--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@actions/core": "^1.9.1",
     "@azure/arm-appcontainers": "^1.1.0",
     "@azure/identity": "^2.1.0",
-    "azure-actions-webclient": "^1.0.10"
+    "azure-actions-webclient": "^1.0.10",
+    "semver": "^7.3.7"
   },
   "devDependencies": {
     "@types/node": "^13.5.2"
