--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
   },
   "devDependencies": {
     "@types/node": "^13.5.2"
+  },
+  "engines": {
+    "node": "16.13.0",
+    "npm": "8.1.0"
   }
 }
