--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -11,7 +11,7 @@ jobs:
 
     - uses: actions/setup-node@v2
       with:
-        node-version: '16.13.0' # Need to specify the miner version
+        node-version: '16.13.0'
         registry-url: 'https://npm.pkg.github.com'
 
     - name: 'Login via Azure CLI'
