--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -19,7 +19,7 @@ jobs:
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
     - name: 'Deploy to Azure Container Apps'
-      uses: "yuhattor/aca-deploy@v1.1"
+      uses: ./
 
       with:
         resource-group: sample-rg
