--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
   "dependencies": {
     "@actions/core": "^1.9.1",
     "@azure/arm-appcontainers": "^1.1.0",
-    "@azure/identity": "^2.1.0"
+    "@azure/identity": "^2.1.0",
+    "debug": "^4.3.4"
   },
   "devDependencies": {
-    "@types/node": "^13.13.52",
-    "debug": "^4.3.4"
+    "@types/node": "^13.13.52"
   }
 }
