--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -9,6 +9,12 @@ jobs:
     - name: 'Checkout GitHub Action'
       uses: actions/checkout@master
 
+    - uses: actions/setup-node@v2
+      with:
+        node-version: '16.13.0'
+        registry-url: 'https://npm.pkg.github.com'
+    - run: npm install debug
+
     - name: 'Login via Azure CLI'
       uses: azure/login@v1
       with:
