--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -14,15 +14,14 @@ jobs:
         node-version: '16.13.0'
         registry-url: 'https://npm.pkg.github.com'
     - run: npm install 
-    - run: tsc
-
+    - run: npm install 
+    - r
     - name: 'Login via Azure CLI'
       uses: azure/login@v1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
     - name: 'Deploy to Azure Container Apps'
       uses: ./
-
       with:
         resource-group: sample-rg
         name: yuhattor-container
