--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -23,6 +23,6 @@ jobs:
       uses: ./
       with:
         resource-group: sample-rg
-        name: yuhattor-container3
-        location: 'east us'
+        name: yuhattor-container4
+        location: 'East US'
         subscription-id: 'a4deccb1-a1f6-40cb-a923-f55a7d22c32d'
