--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -22,7 +22,7 @@ jobs:
     - name: 'Deploy to Azure Container Apps'
       uses: ./
       with:
-        resource-group: sample-rg
+        resource-group: sample-rg1
         name: yuhattor-test
         location: 'East US'
         subscription-id: 'a4deccb1-a1f6-40cb-a923-f55a7d22c32d'
