--- a/action.yml
+++ b/action.yml
@@ -8,10 +8,13 @@ inputs:
         description: 'Location where the Container will be deployed'
         required: true
     name:
-        description: 'Name of the Container Group Instance'
+        description: 'TBD: Name of the Container Group Instance - this should be aquired with cred automatically'
         required: true
     subscription-id:
         description: 'Name of the Subscription ID'
+        required: true
+    managed-environment-name:
+        description: 'Name of the Managed Environment'
         required: true
 outputs:
     app-url:
