--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -30,3 +30,7 @@ jobs:
         daprAppPort: 3000
         daprAppProtocol: 'http'
         daprEnabled: true
+        ingressCustomDomains: ""
+        ingressExternal: true
+        ingressTargetPort: 3000
+        ingressTraffic: ""
