--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -27,10 +27,10 @@ jobs:
         location: 'East US'
         subscription-id: 'a4deccb1-a1f6-40cb-a923-f55a7d22c32d'
         managed-environment-name: 'my-container-env'
-        daprAppPort: 3000
-        daprAppProtocol: 'http'
-        daprEnabled: true
-        ingressCustomDomains: ""
-        ingressExternal: true
-        ingressTargetPort: 3000
-        ingressTraffic: ""
+        dapr-app-port: 3000
+        dapr-app-protocol: 'http'
+        dapr-enabled: true
+        ingress-custom-domains: ""
+        ingress-external: true
+        ingress-target-port: 3000
+        ingress-traffic: ""
